feat: Enhance TodoService with pageable validation and sorting
- Added validation for sorting parameters in TodoServiceImpl to ensure only allowed fields are used for sorting.
- Implemented a new method `validateAndFixPageable` to handle pageable requests safely.
- Updated logging to provide better insights during the retrieval of todos.
- Introduced a DataLoader to populate the database with sample Todo data on application startup.
- Created a new Pageable class to encapsulate pagination details.
- Updated application.yml for improved logging format.

docs: Add comprehensive entity and relationship documentation for Copilot and Mall APIs

- Created detailed entity relationship diagrams (ERD) for both Copilot and Mall APIs.
- Documented entity attributes, relationships, and provided example JSON data for clarity.
- Included role definitions and status codes for better understanding of the system's structure.

chore: Initialize repository classes for Member, Product, Role, and Todo

- Created empty repository interfaces for Member, Product, Role, and Todo to facilitate future development.